Moved away from lombok @NonNull and started using jsr305 annotations for nullness
commit 0b3a3a3bd467fb83132a7c8a9daaaad297201dff
Author: Ilari Tommiska <ilari97@hotmail.com>
Date:   Tue Dec 3 14:28:48 2019 +0200

    Search & Replace to remove all remaining NonNull -annotations

commit 7ac994a3cef4c88c70ade70c178ce630a0a82bbd
Author: Ilari Tommiska <ilari97@hotmail.com>
Date:   Tue Dec 3 14:20:56 2019 +0200

    Removed null-check tests, those are something that should be validated at compile-time, not runtime

commit 54dc0e48d40f6d9b18912b7b52879dc78da47686
Author: Ilari Tommiska <ilari97@hotmail.com>
Date:   Tue Dec 3 14:00:30 2019 +0200

    Cleanup and documentation pass over the whole ECS module

commit 63b8eddad91e191803d28cbfd8b264263736a99b
Author: Ilari Tommiska <ilari97@hotmail.com>
Date:   Tue Dec 3 11:29:01 2019 +0200

    First pass into documenting the ECS and getting rid of lombok.NotNull